--- a/templates/delete.html
+++ b/templates/delete.html
@@ -1,1 +1,44 @@
 
+{% extends 'base.html' %}
+{% load crispy_forms_tags %}
+{% block content %}
+{% if user.is_authenticated%}
+<div class="container mt-4 ">
+
+            <div class="col">
+                <div class="card">
+                    <div class='d-flex justify-content-center'>
+                        <div class='rasim mt-3'>
+                            {% if object.photo %}
+                                <img src="{{object.photo.url}}" class="card-img-top" alt="...">
+                            {% endif %}
+                        </div>
+                    </div>
+                    <div class="card-body ">
+                        <h4 class="card-title text-center">{{object.title}}</h4>
+                        <hr>
+                        <p class="card-text">{{object.text}}</p>
+                        <div>
+                            
+                            
+                        </div>
+                    </div>
+                    <diw class='row'>
+                        <diw class='col-6 m-3 text-danger'>
+                            {{object.date}}
+                            <div class="row">
+                                <div class=' mt-3 col-12 '>
+                                    <form method='post' enctype="multipart/form-data">
+                                        {% csrf_token %}
+                                        {{form|crispy}}
+                                        <button type='submit' class="btn btn-danger mt-2 w-25">Delete</button>
+                                        </form>
+                                    </div>
+                                </div> 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+    
+{% endif %}
+{% endblock content %}
