--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,61 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link href="{% static 'css/style.css' %}"  rel="stylesheet">
+
+    <style>
+      .content{
+        display: grid;
+        grid-gap: 15px;
+        grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+        /* grid-auto-rows: 2fr; */
+        grid-auto-flow: dense;
+      }
+
+      h2{
+          color: blue;
+      }
+      a{
+          list-style: none;
+          text-decoration: none;
+          color: black;
+      }
+      a:hover{
+          color: black;
+      }
+      .nav-item a {
+          color:slategrey;
+      }
+      .rasim{
+          width: 98%;
+          
+      }
+      img{
+          
+          background-repeat:no-repeat ;
+          background-size: cover;
+      }
+      .clearablefileinput {
+          background-color:green;
+          color: white;
+          border-radius: 5px;
+          outline: none;
+          border: 1px solid black;
+          
+      }
+      .kurish{
+          color: rgb(199, 195, 195);
+          margin-left: 10px;
+      }
+      i{
+          padding: 0;
+          margin-bottom: 8px;
+      }
+
+      h1{
+          color: red;
+      }
+
+    </style>
 </head>
 <body>
 
